Fix volume slider styling on firefox

--- a/client/src/styles/player.module.css
+++ b/client/src/styles/player.module.css
@@ -237,16 +237,17 @@ input[type="range"].volumeSlider:focus::-webkit-slider-runnable-track {
 }
 input[type="range"].volumeSlider::-moz-range-track {
   width: 100%;
-  height: 10px;
+  height: 5px;
   cursor: pointer;
   background: #444444;
   border-radius: 5px;
 }
 input[type="range"].volumeSlider::-moz-range-thumb {
-  height: 5px;
-  width: 5px;
+  height: 0px;
+  width: 0px;
   border-radius: 5px;
   cursor: pointer;
+  opacity: 0;
 }
 input[type="range"].volumeSlider::-ms-track {
   width: 100%;
